--- a/app/src/main/res/drawable/customedittext.xml
+++ b/app/src/main/res/drawable/customedittext.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
     <corners
-        android:radius="6dp"
+        android:radius="12dp"
         />
     <solid
-        android:color="#3AAFA9"
+        android:color="#D3D3D3"
         />
     <padding
         android:left="0dp"
@@ -13,11 +13,7 @@
         android:bottom="0dp"
         />
     <size
-        android:width="220dp"
-        android:height="60dp"
-        />
-    <stroke
-        android:width="2dp"
-        android:color="#ffffff"
+        android:width="290dp"
+        android:height="40dp"
         />
 </shape>
