--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -200,7 +200,7 @@
                 android:textColor="#000000"
                 android:text="Mail : "/>
             <EditText
-                android:id="@+id/editTextTextPersonName3"
+                android:id="@+id/email"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -221,7 +221,7 @@
                 android:textColor="#000000"
                 android:text="Profession : "/>
             <EditText
-                android:id="@+id/editTextTextPersonName5"
+                android:id="@+id/genderSpinner"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -240,7 +240,7 @@
                 android:textColor="#000000"
                 android:text="Emergency No : "/>
             <EditText
-                android:id="@+id/editTextTextPersonName6"
+                android:id="@+id/societySpinner"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -260,7 +260,7 @@
                 android:textColor="#000000"
                 android:text="Relation : "/>
             <EditText
-                android:id="@+id/editTextTextPersonName7"
+                android:id="@+id/ageText"
                 android:layout_weight="1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
