--- a/app/src/main/res/layout/activity_simple_form.xml
+++ b/app/src/main/res/layout/activity_simple_form.xml
@@ -9,155 +9,167 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:text="Request To Join"
-        android:textColor="#3AAFA9"
-        android:textSize="25dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Request To Join"
+            android:textColor="#3AAFA9"
+            android:textSize="25dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="Your Name (Required)"
-        android:textColor="#000"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
+            android:text="Your Name (Required)"
+            android:textColor="#000"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <EditText
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/customedittext"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        <EditText
+            android:id="@+id/name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="24dp"
+            android:background="@drawable/customedittext"
+            android:ems="10"
+            android:paddingLeft="13dp"
+            android:inputType="textPersonName"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Your Email (Required)"
-        android:textColor="#000"
-        android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@+id/name"
-        app:layout_constraintTop_toBottomOf="@+id/name" />
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Your Email (Required)"
+            android:textColor="#000"
+            android:textStyle="italic"
+            app:layout_constraintStart_toStartOf="@+id/name"
+            app:layout_constraintTop_toBottomOf="@+id/name" />
 
-    <EditText
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/customedittext"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/customedittext"
+            android:ems="10"
+            android:paddingLeft="13dp"
+            android:inputType="textEmailAddress"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="@+id/name"
+            app:layout_constraintStart_toStartOf="@+id/textView4"
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Your Phone (Required)"
-        android:textColor="#000"
-        app:layout_constraintStart_toStartOf="@+id/email"
-        app:layout_constraintTop_toBottomOf="@+id/email" />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Your Phone (Required)"
+            android:textColor="#000"
+            app:layout_constraintStart_toStartOf="@+id/email"
+            app:layout_constraintTop_toBottomOf="@+id/email" />
 
-    <EditText
-        android:id="@+id/phNum"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/customedittext"
-        android:ems="10"
-        android:inputType="phone"
-        android:textStyle="italic"
-        app:layout_constraintStart_toStartOf="@+id/textView5"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        <EditText
+            android:id="@+id/phNum"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/customedittext"
+            android:ems="10"
+            android:paddingLeft="13dp"
+            android:inputType="phone"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="@+id/email"
+            app:layout_constraintStart_toStartOf="@+id/textView5"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Your Gender (Required)"
-        android:textColor="#000"
-        app:layout_constraintStart_toStartOf="@+id/phNum"
-        app:layout_constraintTop_toBottomOf="@+id/phNum" />
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Your Gender (Required)"
+            android:textColor="#000"
+            app:layout_constraintStart_toStartOf="@+id/phNum"
+            app:layout_constraintTop_toBottomOf="@+id/phNum" />
 
-    <Spinner
-        android:id="@+id/genderSpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/customedittext"
-        android:ems="10"
-        android:inputType="phone"
-        android:textStyle="italic"
-        android:entries="@array/gender"
-        app:layout_constraintStart_toStartOf="@+id/textView6"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        <Spinner
+            android:id="@+id/genderSpinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/customedittext"
+            android:ems="10"
+            android:entries="@array/gender"
+            android:inputType="phone"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="@+id/phNum"
+            app:layout_constraintStart_toStartOf="@+id/textView6"
+            app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Interested Society (Required)"
-        android:textColor="#000"
-        app:layout_constraintStart_toStartOf="@+id/genderSpinner"
-        app:layout_constraintTop_toBottomOf="@+id/genderSpinner" />
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Interested Society (Required)"
+            android:textColor="#000"
+            app:layout_constraintStart_toStartOf="@+id/genderSpinner"
+            app:layout_constraintTop_toBottomOf="@+id/genderSpinner" />
 
-    <Spinner
-        android:id="@+id/societySpinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/customedittext"
-        android:ems="10"
-        android:inputType="phone"
-        android:textStyle="italic"
-        android:entries="@array/society"
-        app:layout_constraintStart_toStartOf="@+id/textView7"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        <Spinner
+            android:id="@+id/societySpinner"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/customedittext"
+            android:ems="10"
+            android:entries="@array/society"
+            android:inputType="phone"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="@+id/genderSpinner"
+            app:layout_constraintStart_toStartOf="@+id/textView7"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Your Age (Required)"
-        android:textColor="#000"
-        app:layout_constraintStart_toStartOf="@+id/societySpinner"
-        app:layout_constraintTop_toBottomOf="@+id/societySpinner" />
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Your Age (Required)"
+            android:textColor="#000"
+            app:layout_constraintStart_toStartOf="@+id/societySpinner"
+            app:layout_constraintTop_toBottomOf="@+id/societySpinner" />
 
-    <TextView
-        android:id="@+id/ageText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/customedittext"
-        android:ems="10"
-        android:inputType="phone"
-        android:textSize="20dp"
-        android:textStyle="italic"
-        android:textAlignment="center"
-        android:entries="@array/society"
-        app:layout_constraintStart_toStartOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        <TextView
+            android:id="@+id/ageText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/customedittext"
+            android:ems="10"
+            android:entries="@array/society"
+            android:inputType="phone"
+            android:textAlignment="center"
+            android:textSize="20dp"
+            android:paddingLeft="13dp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="@+id/societySpinner"
+            app:layout_constraintStart_toStartOf="@+id/textView8"
+            app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
         <Button
             android:id="@+id/done"
@@ -165,8 +177,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/custombtn"
+            android:text="Join Club"
             android:textColor="#ffffff"
-            android:text="Send"
+            app:layout_constraintEnd_toEndOf="@+id/ageText"
             app:layout_constraintStart_toStartOf="@+id/ageText"
             app:layout_constraintTop_toBottomOf="@+id/ageText" />
     </androidx.constraintlayout.widget.ConstraintLayout>
